# kmatrix-day-2025

./: .cspell.json  .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lock.yml
docs/: .gitignore  K-matrix.jl  Manifest.toml  _quarto.yml  apa.csl  experimental-data.csv  finding-poles-2channels.ipynb  finding-poles-live.ipynb  finding-poles.ipynb  index.qmd  k-matrix.jl  references.bib  references.qmd  resources.qmd  styles-landing-page.css  styles.css
docs/_build/html/: index.html  search.json  styles.css
docs/_build/html/site_libs/bootstrap/: bootstrap-45428c6e6cbbc19593b48444bd233035.min.css  bootstrap-dark-d4d8b4654b46c3c10bcdd3c209b05a96.min.css
docs/_build/html/site_libs/quarto-html/: quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css  quarto-syntax-highlighting-dark-b53751a350365c71b6c909e95f209ed1.css
docs/_build/html/site_libs/quarto-search/: autocomplete.umd.js  quarto-search.js
docs/index_files/libs/bootstrap/: bootstrap-6b0a05295974ad403bf668799e9ab4ef.min.css
docs/index_files/libs/quarto-html/: quarto.js
docs/notebooks/: finding-poles.ipynb
