[project]
authors = [
    {name = "Ilya Segal"},
    {name = "Lena Pöpping"},
    {name = "Mikhail Mikhasenko"},
    {name = "Nils Hüsken"},
    {name = "Remco de Boer"},
]
dependencies = [
    "ampform",
    "iminuit",
    "matplotlib",
    "sympy",
]
name = "k-matrix-day-2025"
requires-python = "~=3.13.0"
version = "0.0.0"

[dependency-groups]
dev = [
    "ruff",
    {include-group = "doc"},
    {include-group = "jupyter"},
]
doc = [
    "jupyter-cache",
    "quarto-cli",
]
jupyter = [
    "jupyterlab",
    "jupyterlab-code-formatter",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-quickopen",
    "python-lsp-ruff",
    "python-lsp-server[rope]",
]
lite = [
    "jupyterlab",
    "jupyterlab-lsp",
    "jupyterlite-core",
    "jupyterlite-pyodide-kernel",
    "notebook",
    "python-lsp-server[rope]",
]

[tool.pixi.dependencies]
julia = {channel = "https://repo.prefix.dev/julia-forge"}
python = {version = "3.13.*", channel = "conda-forge"}

[tool.pixi.environments]
default = {features = ["dev", "lite"], solve-group = "main"}
doc = {features = ["doc", "lite"], solve-group = "main"}
lite = {features = ["lite"], solve-group = "main"}
main = {features = [], solve-group = "main"}

[tool.pixi.tasks.clean-lite]
cmd = "rm -rf docs/_build/html/lite"
description = "Remove the build files of the Jupyter Lite server"

[tool.pixi.tasks.doc]
cmd = "quarto render docs"
depends-on = [{task = "lite", environment = "lite"}]
description = "Build website (no cell output)"

[tool.pixi.tasks.doclive]
cmd = "quarto preview docs"
depends-on = [{task = "lite", environment = "lite"}]
description = "Preview website (live reload)"

[tool.pixi.tasks.docnb]
cmd = "quarto render docs --execute"
depends-on = [
    "pluto-server",
    {task = "lite", environment = "lite"},
]
description = "Execute notebooks and build website"

[tool.pixi.tasks.instantiate-julia]
cmd = "julia --eval='using Pkg; Pkg.instantiate()' --project=docs"
description = "Instantiate Julia environment"

[tool.pixi.tasks.lab]
cmd = "jupyter lab docs"
description = "Launch Jupyter Lab"

[tool.pixi.tasks.lite]
cmd = "jupyter lite build --contents finding-poles.ipynb --contents finding-poles-2channels.ipynb --output-dir lite"
cwd = "docs"
depends-on = ["clean-lite"]
description = "Build Jupyter Lite server"

[tool.pixi.tasks.pluto]
cmd = "julia --eval='using Pluto; Pluto.run(notebook=\"k-matrix.jl\")' --project=."
cwd = "docs"
depends-on = ["instantiate-julia"]
description = "Launch Pluto notebook server"

[tool.pixi.tasks.pluto-server]
cmd = "julia --eval='using PlutoSliderServer; PlutoSliderServer.export_notebook(\"k-matrix.jl\")' --project=."
cwd = "docs"
depends-on = ["instantiate-julia"]
description = "Preview static Pluto website"

[tool.pixi.tasks.style]
cmd = "pre-commit run --all-files"

[tool.pixi.workspace]
authors = [
    "Ilya Segal",
    "Lena Pöpping",
    "Mikhail Mikhasenko",
    "Nils Hüsken",
    "Remco de Boer",
]
channels = ["conda-forge", "https://repo.prefix.dev/julia-forge"]
name = "kmatrix-day-2025"
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]
version = "0.1.0"

[tool.ruff]
preview = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN00",
    "ANN20",
    "COM812",
    "CPY001",
    "D103",
    "D203",
    "D213",
    "E741",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-self]
ignore-names = ["_print"]

[tool.ruff.lint.isort]
known-third-party = ["sympy"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "B018",
    "C408",
    "D",
    "E303",
    "E402",
    "N816",
]
"finding-poles-live.ipynb" = ["F401"]

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = ["project"]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
